crates/pg_syntax/tests/snapshots/postgres_regress/int8@55.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT q2, abs(q2) FROM INT8_TBL;"
---
SelectStmt@0..33
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..9
    ColumnRef@7..9
      Ident@7..9 "q2"
  Ascii44@9..10 ","
  Whitespace@10..11 " "
  ResTarget@11..17
    FuncCall@11..17
      Ident@11..14 "abs"
      Ascii40@14..15 "("
      ColumnRef@15..17
        Ident@15..17 "q2"
  Ascii41@17..18 ")"
  Whitespace@18..19 " "
  From@19..23 "FROM"
  Whitespace@23..24 " "
  RangeVar@24..32
    Ident@24..32 "INT8_TBL"
  Ascii59@32..33 ";"

