crates/pg_syntax/tests/snapshots/postgres_regress/int8@56.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT min(q1), min(q2) FROM INT8_TBL;"
---
SelectStmt@0..38
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..13
    FuncCall@7..13
      Ident@7..10 "min"
      Ascii40@10..11 "("
      ColumnRef@11..13
        Ident@11..13 "q1"
  Ascii41@13..14 ")"
  Ascii44@14..15 ","
  Whitespace@15..16 " "
  ResTarget@16..22
    FuncCall@16..22
      Ident@16..19 "min"
      Ascii40@19..20 "("
      ColumnRef@20..22
        Ident@20..22 "q2"
  Ascii41@22..23 ")"
  Whitespace@23..24 " "
  From@24..28 "FROM"
  Whitespace@28..29 " "
  RangeVar@29..37
    Ident@29..37 "INT8_TBL"
  Ascii59@37..38 ";"

