crates/pg_syntax/tests/snapshots/postgres_regress/int8@59.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_char(q1, '9G999G999G999G999G999D999G999'), to_char(q2, '9,999,999,999,999,999.999,999')\n\tFROM INT8_TBL;"
---
SelectStmt@0..113
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..50
    FuncCall@7..50
      Ident@7..14 "to_char"
      Ascii40@14..15 "("
      ColumnRef@15..17
        Ident@15..17 "q1"
      Ascii44@17..18 ","
      Whitespace@18..19 " "
      AConst@19..50
        Sconst@19..50 "'9G999G999G999G999G99 ..."
  Ascii41@50..51 ")"
  Ascii44@51..52 ","
  Whitespace@52..53 " "
  ResTarget@53..96
    FuncCall@53..96
      Ident@53..60 "to_char"
      Ascii40@60..61 "("
      ColumnRef@61..63
        Ident@61..63 "q2"
      Ascii44@63..64 ","
      Whitespace@64..65 " "
      AConst@65..96
        Sconst@65..96 "'9,999,999,999,999,99 ..."
  Ascii41@96..97 ")"
  Newline@97..98 "\n"
  Newline@98..99 "\t"
  From@99..103 "FROM"
  Whitespace@103..104 " "
  RangeVar@104..112
    Ident@104..112 "INT8_TBL"
  Ascii59@112..113 ";"

