crates/pg_syntax/tests/snapshots/postgres_regress/int8@67.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_char(q2, 'S0999999999999999')      FROM INT8_TBL;"
---
SelectStmt@0..59
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..38
    FuncCall@7..38
      Ident@7..14 "to_char"
      Ascii40@14..15 "("
      ColumnRef@15..17
        Ident@15..17 "q2"
      Ascii44@17..18 ","
      Whitespace@18..19 " "
      AConst@19..38
        Sconst@19..38 "'S0999999999999999'"
  Ascii41@38..39 ")"
  Whitespace@39..45 "      "
  From@45..49 "FROM"
  Whitespace@49..50 " "
  RangeVar@50..58
    Ident@50..58 "INT8_TBL"
  Ascii59@58..59 ";"

